// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component - layout should render 1`] = `
<main
  className="jsx-1158505670 sans-serif ma0 pa0 "
/>
`;

exports[`component - layout should render with props 1`] = `
<main
  className="jsx-1158505670 sans-serif ma0 pa0 "
>
  <b>
    #content
  </b>
</main>
`;
